# hardware-info-gtk4

./: .gitignore  Cargo.toml  README.md
data/: io.github.mars7x.hardware-info-gtk4.desktop  io.github.mars7x.hardware-info-gtk4.metainfo.xml
flatpak/: io.github.mars7x.hardware-info-gtk4.yml
scripts/: build-flatpak.sh  build-native.sh  run-native.sh
src/: main.rs  telemetry.rs
